; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/soft-fp/extr_fixtfsi.c___fixtfsi.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/soft-fp/extr_fixtfsi.c___fixtfsi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FP_DECL_EX = common dso_local global i32 0, align 4
@A = common dso_local global i32 0, align 4
@SI_BITS = common dso_local global i32 0, align 4
@FP_HANDLE_EXCEPTIONS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__fixtfsi(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* @FP_DECL_EX, align 4
  %5 = load i32, i32* @A, align 4
  %6 = call i32 @FP_DECL_Q(i32 %5)
  %7 = load i32, i32* @A, align 4
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @FP_UNPACK_RAW_Q(i32 %7, i32 %8)
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @A, align 4
  %12 = load i32, i32* @SI_BITS, align 4
  %13 = call i32 @FP_TO_INT_Q(i32 %10, i32 %11, i32 %12, i32 1)
  %14 = load i32, i32* @FP_HANDLE_EXCEPTIONS, align 4
  %15 = load i32, i32* %3, align 4
  ret i32 %15
}

declare dso_local i32 @FP_DECL_Q(i32) #1

declare dso_local i32 @FP_UNPACK_RAW_Q(i32, i32) #1

declare dso_local i32 @FP_TO_INT_Q(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
